--- a/Conexiones/BDs.conf
+++ b/Conexiones/BDs.conf
@@ -13,3 +13,13 @@
 [puerto]3306
 [usuari]bdtafu
 [passwo]wdixP|VTO4<98
+[baseda]etiquetas
+[servid]192.168.10.7
+[puerto]3306
+[usuari]bdtafu
+[passwo]wdixP|VTO4<98
+[baseda]test
+[servid]192.168.10.7
+[puerto]3306
+[usuari]bdtafu
+[passwo]wdixP|VTO4<98
